[package]
name = "rustart"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
plotters = "0.3.5"
plotters-canvas = "0.3.0"
wasm-bindgen = "0.2.90"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.67", features = ["HtmlCanvasElement"] }
